--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <div class="text">
           <div class="text-one">Hello,</div>
           <div class="text-two">I'm M. Afdal Muski</div>
-          <div class="text-three">Mahasiswa</div>
+          <div class="text-three">ALUMNI UIN</div>
           <div class="text-four">From Riau</div>
         </div>
         <div class="button">
